package com.smartfitness.monitoring.adapter;

/**
 * System Interface Layer: Scheduler Service Interface
 * Reference: 05_MonitoringServiceComponent.puml (ISchedulerService)
 */
public interface ISchedulerService {
    void scheduleHealthCheck();
}

