@startuml MonitoringServiceComponent
' MonitoringService_component.puml (DD-04: Fault Detection & Real-time Notification)
' Tactic: Heartbeat, Ping/echo, Maintain Audit Trail, Passive Redundancy

package "Interface Layer" {
  interface IEquipmentStatusReceiver
  interface IEquipmentCommandApi
  
  component EquipmentStatusReceiver
  component EquipmentCommandController
  
  IEquipmentStatusReceiver -- EquipmentStatusReceiver
  IEquipmentCommandApi -- EquipmentCommandController
}

package "Business Layer" {
  ' Tactic: Heartbeat (Equipment-driven reporting)
  interface IHeartbeatReceiverService
  interface IFaultDetectionService
  
  component HeartbeatReceiver
  component FaultDetector
  
  IHeartbeatReceiverService -- HeartbeatReceiver
  IFaultDetectionService -- FaultDetector
  
  HeartbeatReceiver ..( IFaultDetectionService : <<Local>>
  
  note right of HeartbeatReceiver
    **DD-04 Tactic: Heartbeat**
    Equipment sends status every 10 minutes
    
    If '고장' status received:
    → Immediate fault detection
    → Publish EquipmentFaultEvent
  end note
  
  ' Tactic: Ping/echo (System-driven monitoring)
  interface IPingEchoService
  
  component EquipmentHealthChecker
  component PingEchoExecutor
  
  IPingEchoService -- PingEchoExecutor
  
  EquipmentHealthChecker ..( IPingEchoService : <<Local>>
  EquipmentHealthChecker ..( IFaultDetectionService : <<Local>>
  
  note left of EquipmentHealthChecker
    **DD-04 Tactic: Ping/echo**
    Triggered by Timer every 10 seconds
    
    If no heartbeat for 30 seconds:
    → Send ping/status request
    → If no response: fault detected
    → Publish EquipmentFaultEvent
    
    Target: Alert within 15초 (QAS-01)
  end note
  
  ' Tactic: Maintain Audit Trail
  interface IAuditLogService
  component AuditLogger
  
  IAuditLogService -- AuditLogger
  
  FaultDetector ..( IAuditLogService : <<Local>>
}

package "System Interface Layer" {
  interface IEquipmentStatusRepository
  interface IEquipmentGateway
  interface ISchedulerService
  interface IMessagePublisherService
  
  component EquipmentStatusJpaRepository
  component EquipmentGatewayClient
  component QuartzScheduler
  component RabbitMQAdapter
  
  database MonitorDatabase
  
  IEquipmentStatusRepository -- EquipmentStatusJpaRepository
  IEquipmentGateway -- EquipmentGatewayClient
  ISchedulerService -- QuartzScheduler
  IMessagePublisherService -- RabbitMQAdapter
  
  EquipmentStatusJpaRepository ..( MonitorDatabase : <<JDBC>>
}

' Package external connections (Interface Layer → Business Layer)
EquipmentStatusReceiver ..( IHeartbeatReceiverService : <<TCP/HTTPS>>
EquipmentCommandController ..( IPingEchoService : <<HTTPS>>

' Business Layer → System Interface Layer

' Heartbeat flow
HeartbeatReceiver ..( IEquipmentStatusRepository : <<save status>>
FaultDetector ..( IMessagePublisherService : <<Publish EquipmentFaultEvent>>
FaultDetector ..( IAuditLogService : <<log>>

' Ping/echo flow
EquipmentHealthChecker ..( ISchedulerService : <<trigger every 10s>>
EquipmentHealthChecker ..( IEquipmentStatusRepository : <<check last heartbeat>>
PingEchoExecutor ..( IEquipmentGateway : <<send ping>>
PingEchoExecutor ..( IEquipmentStatusRepository : <<update>>

' Audit trail
AuditLogger ..( IEquipmentStatusRepository : <<persist>>

legend right
  **Monitoring Service: DD-04 Fault Detection**
  
  **Two Detection Paths:**
  1. **Heartbeat (Equipment → Monitor)**
     - Equipment reports every 10 min
     - Direct fault detection
  
  2. **Ping/echo (Monitor → Equipment)**
     - System checks every 10 sec
     - Timeout-based detection (30 sec)
  
  **Tactic: Passive Redundancy**
  - EquipmentFaultEvent → Message Broker
  - NotificationDispatcher subscribes
  - Alert sent to BranchOwner
  
  **Target: 15초 이내 알림 (QAS-01)**
end legend

@enduml
